--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Basic playing cards module",
   "version": "0.1.1",
   "author": "James Brumond <james@jbrumond.me> (http://jbrumond.me)",
+  "scripts": {
+    "jsdocs": "jsdoc ./src/ -d ./docs/ -c ./.jsdocs.json"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/kbjr/node-cards.git"
@@ -19,6 +22,7 @@
     "rand-utils": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.5.0"
+    "eslint": "^5.5.0",
+    "jsdoc": "^3.5.5"
   }
 }
