--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.0-alpha.1",
   "author": "James Brumond <james@jbrumond.me> (http://jbrumond.me)",
   "scripts": {
-    "test": "echo 'No tests defined'",
+    "test": "mocha --require ts-node/register ./tests/**/*.test.ts",
     "clean": "rimraf ./build",
     "build": "tsc --build tsconfig.json"
   },
@@ -24,8 +24,12 @@
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/node": "^17.0.21",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.2",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.3.4"
   }
 }
