cleanup old files; update license file with current year

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "shuffle"
   ],
   "main": "src/index.js",
+  "license": "MIT",
   "dependencies": {
     "source-map-support": "^0.5.19"
   },
