--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
   ],
   "main": "src/index.js",
   "license": "MIT",
-  "dependencies": {
-    "source-map-support": "^0.5.19"
-  },
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/node": "^17.0.21",
@@ -31,6 +28,7 @@
     "mocha": "^9.2.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
+    "source-map-support": "^0.5.19",
     "typescript": "^4.3.4"
   }
 }
