--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
     "ts-node": "^10.7.0",
+    "typedoc": "^0.22.13",
     "typescript": "^4.3.4"
   }
 }
