update main in package.json to point to build file

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "random",
     "shuffle"
   ],
-  "main": "src/index.js",
+  "main": "build/index.js",
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "^4.3.0",
