update homepage url

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git://github.com/kbjr/node-cards.git"
   },
-  "homepage": "http://kbjr.github.com/node-cards/",
+  "homepage": "https://kbjr.github.io/node-cards/",
   "keywords": [
     "cards",
     "games",
