--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "mocha --require ts-node/register ./tests/**/*.test.ts",
     "clean": "rimraf ./build ./docs",
     "docs": "typedoc --out docs src/index.ts",
-    "build": "tsc --build tsconfig.json"
+    "build": "tsc --build tsconfig.json",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "@types/node": "^17.0.21",
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
     "ts-node": "^10.7.0",
