--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "James Brumond <james@jbrumond.me> (http://jbrumond.me)",
   "scripts": {
     "test": "mocha --require ts-node/register ./tests/**/*.test.ts",
+		"test:unit": "mocha --config tests/.mocharc.js",
     "clean": "rimraf ./build ./docs",
     "docs": "typedoc --out docs src/index.ts",
     "build": "tsc --build tsconfig.json"
@@ -27,6 +28,7 @@
     "@types/node": "^17.0.21",
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
+    "mochawesome": "^7.1.3",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
     "ts-node": "^10.7.0",
